--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /GitSsisSolultion/GitSsisSolultion/GitSsisSolultion.dtproj.user
+/GitSsisSolultion/GitSsisSolultion.v12.suo
+/GitSsisSolultion/GitSsisSolultion.v12.suo
